[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snakecube"
version = "0.1.0"
description = "Solves the Snakecube"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyvista>=0.48.1",
]

[project.scripts]
snakecube = "snakecube:start_menu"
